syntax ="proto3";

package example;

service Check{
    rpc CheckRequest(HelloRequest) returns (HelloResponse);
} 
message HelloRequest{
    int32 id=1;
    string name=2;
}

message HelloResponse{
    int32 id=1;
    string message=2;
}